Update 'go-liuqbzmm' component image to: quay.io/chetna14manku_org/go-liuqbzmm:github-547135dc1017abcedabb65de1ec38bac16fed47e

--- a/components/go-liuqbzmm/overlays/development/deployment-patch.yaml
+++ b/components/go-liuqbzmm/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-liuqbzmm
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/chetna14manku_org/go-liuqbzmm:github-547135dc1017abcedabb65de1ec38bac16fed47e
+          name: container-image
